Code lines no longer wrap

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -69,19 +69,16 @@ div {
     @include hyphenation;
 }
 
-code {
-    @media screen and (max-width: 767px) {
-        white-space: pre-wrap;
-        word-wrap: break-word;
-    }
-}
-
 pre {
     padding: 0;
     margin-bottom: 0;
+    overflow-x: auto;
 
     code {
         display: block;
+        overflow-wrap: normal;
+        word-wrap: normal;
+        white-space: pre;
     }
 }
 
